[gd_scene load_steps=5 format=2]

[ext_resource path="res://Art/trash-can-solid.svg" type="Texture" id=1]
[ext_resource path="res://Prog/Graph.gd" type="Script" id=2]
[ext_resource path="res://Prog/ProgMode.gd" type="Script" id=6]
[ext_resource path="res://Prog/Nodes/Motor.tscn" type="PackedScene" id=7]

[node name="Prog" type="Control"]
margin_right = 1024.0
margin_bottom = 568.0
script = ExtResource( 6 )

[node name="Graph" type="GraphEdit" parent="."]
margin_left = 128.0
margin_right = 1024.0
margin_bottom = 568.0
right_disconnects = true
script = ExtResource( 2 )

[node name="Motor" parent="Graph" instance=ExtResource( 7 )]
margin_left = 700.0
margin_top = 50.0
margin_right = 850.0
margin_bottom = 125.0
mouse_filter = 1
offset = Vector2( 700, 50 )

[node name="Motor2" parent="Graph" instance=ExtResource( 7 )]
margin_left = 700.0
margin_top = 150.0
margin_right = 850.0
margin_bottom = 225.0
mouse_filter = 1
offset = Vector2( 700, 150 )
Motor = "Right"

[node name="DeleteButton" type="ToolButton" parent="."]
margin_left = 384.0
margin_top = 12.0
margin_right = 844.0
margin_bottom = 532.0
rect_scale = Vector2( 0.04, 0.04 )
icon = ExtResource( 1 )

[node name="Sidebar" type="ScrollContainer" parent="."]
margin_left = 8.0
margin_top = 48.0
margin_right = 128.0
margin_bottom = 560.0
scroll_horizontal_enabled = false

[node name="VBox" type="VBoxContainer" parent="Sidebar"]
margin_right = 100.0
margin_bottom = 564.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 100, 564 )
custom_constants/separation = 20

[connection signal="connection_request" from="Graph" to="Graph" method="_on_Graph_connection_request"]
[connection signal="delete_nodes_request" from="Graph" to="Graph" method="_on_Graph_delete_nodes_request"]
[connection signal="disconnection_request" from="Graph" to="Graph" method="_on_Graph_disconnection_request"]
[connection signal="node_selected" from="Graph" to="Graph" method="_on_Graph_node_selected"]
[connection signal="node_unselected" from="Graph" to="Graph" method="_on_Graph_node_unselected"]
[connection signal="button_down" from="DeleteButton" to="Graph" method="_on_DeleteButton_down"]
